--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,24 +1,7 @@
-<div ng-controller="AppCtrl" layout="column" layout-fill>
+<div ng-controller="AppCtrl" layout="row" layout-fill>
   <section layout="row" flex>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-md')">
-      <md-toolbar class="md-theme-indigo">
-        <h1 class="md-toolbar-tools">Sidenav Left</h1>
-      </md-toolbar>
-      <md-content class="md-padding" ng-controller="LeftCtrl">
-        <md-button ng-click="close()" class="md-primary" hide-gt-md>
-          Close Sidenav Left
-        </md-button>
-        <p hide-md show-gt-md>
-          This sidenav is locked open on your device. To go back to the default behavior,
-          narrow your display.
-        </p>
-      </md-content>
-    </md-sidenav>
     <md-content flex class="md-padding">
       <div layout="column" layout-fill layout-align="center center">
-        <p>
-        The left sidenav will 'lock open' on a medium (>=960px wide) device.
-        </p>
         <div>
           <md-button ng-click="toggleLeft()"
             class="md-primary" hide-gt-md>
