--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,1 @@
-.div-columna1{background-color: #0072C6;color: white;text-align: center;}
-.div-columna2{background-color: red;color: white;text-align: center;}
-.div-columna3{background-color: green;color: white;text-align: center;}
-.div-columna4{background-color: yellow;color: white;text-align: center;}
-#cont-columnas{margin-top: 10px}
+#mi-nav-bar{background: radial-gradient(circle, #1799C5, #045374,#022E5D);color: white}
