--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,84 +1,34 @@
-<div layout="row" flex ng-controller="AppCtrl">
-  <section layout="row" flex>
-    <md-sidenav md-component-id="left" md-is-locked-open="$media('gt-md')" ng-controller="BarraCtrl">
-       <md-toolbar id="mi-nav-bar" class="md-theme-indigo">
-         <h1 class="md-toolbar-tools">Sidenav Left</h1>
-        </md-toolbar>
+<div ng-controller="NavbarCtrl" layout="column" >
+    <md-sidenav md-component-id="left">
+      <md-button ng-click="closeLeftMenu()">
+          Cerrar
+      </md-button>
+	    <md-content class='md-padding' layout-align-gt-sm  ng-repeat="noticia in noticias">
+		      <md-toolbar>
+		        <h2 class="md-toolbar-tools">
+		          <span>{{noticia.title}}</span>
+		        </h2>
+		     </md-toolbar>
+		     <img class="img-post" src="images/{{noticia.image}}.jpg" >
+		      <p>{{noticia.text}}</p>
+	    </md-content>
     </md-sidenav>
-  </section>
+     <md-content>
+      <md-button ng-click="openLeftMenu()">
+          Post Recientes
+      </md-button>
+    </md-content>
 </div>
 
-  <md-button ng-click="ocultar()"class="md-primary">
-        Toggle right
-  </md-button>
-<!--<div ng-controller="AppCtrl" layout="row" layout-fill>
-  <section layout="row" flex>
-    <md-content flex class="md-padding">
-      <div layout="column" layout-fill layout-align="center center">
-        <div>
-          <md-button ng-click="toggleLeft()"
-            class="md-primary" hide-gt-md>
-            Toggle left
-          </md-button>
-        </div>
-        <div>
-          <md-button ng-click="toggleRight()"
-            class="md-primary">
-            Toggle right
-          </md-button>
-        </div>
-      </div>
-    </md-content>
-    <md-sidenav class="md-sidenav-top md-whiteframe-z2" md-component-id="right">
-      <md-toolbar class="md-theme-light">
-        <h1 class="md-toolbar-tools">Sidenav Right</h1>
-      </md-toolbar>
-      <md-content ng-controller="RightCtrl" class="md-padding">
-        <md-button ng-click="close()" class="md-primary">
-          Close Sidenav Right
-        </md-button>
-      </md-content>
-    </md-sidenav>
-  </section>
-</div> -->
 
-
-
-
-<div layout="row" flex layout-sm="column">
-	<md-content class='md-padding'>
+<div layout="row" flex layout-sm="column" ng-controller="MainCtrl">
+	<md-content class='md-padding' layout-align-gt-sm  ng-repeat="slide in slides">
 		<md-toolbar>
-			<h2 class="md-toolbar-tools">
-				<span>Post</span>
+			<h2 class="md-toolbar-tools titulo-post">
+				<span class="">{{slide.title}}</span>
 			</h2>
 		</md-toolbar>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	</md-content>
-
-	<md-content class='md-padding' layout-align-gt-sm>
-		<md-toolbar>
-			<h2 class="md-toolbar-tools">
-				<span>New</span>
-			</h2>
-		</md-toolbar>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	</md-content>
-
-	<md-content class='md-padding' layout-align-gt-sm>
-		<md-toolbar>
-			<h2 class="md-toolbar-tools">
-				<span>Mail</span>
-			</h2>
-		</md-toolbar>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	</md-content>
-
-	<md-content class='md-padding' layout-align-gt-sm>
-		<md-toolbar>
-			<h2 class="md-toolbar-tools">
-				<span>Pets</span>
-			</h2>
-		</md-toolbar>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			<img class="img-post" src="images/{{slide.image}}.jpg" >
+			<p class="post">{{slide.text}}</p>
 	</md-content>
 </div>
