--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,13 @@
 /*.post{background: radial-gradient(circle, #1799C5, #045374,#022E5D);color: white}*/
-.post{background: #022E5D;color: white;text-align: justify;}
+.btn-menu{background: radial-gradient(circle, #003867, #001A4B, #00082C);text-align: center;color: white;}
+.h3-menu{margin: 0 auto;text-align: center;color: white;text-decoration: none}
+.post{color: white;text-align: justify; width: 90%;margin: 0 auto; padding: 5px 0 5px 0}
+.mi-md-content{background: #022E5D;}
 .img-post{width: 100%;height: 200px}
-.titulo-post{font-weight: 700;text-align: center;}}
+.titulo-post{font-weight: 700;text-align: center;}
+.animated{transition: .5s linear all;opacity: 1;overflow: hidden;}
+.animated.ng-hide{opacity: 0}
+.mi-toolbar-noticia{background: radial-gradient(circle, #CE0000,#850000,#520000);border-radius: 5px}
+.mi-toolbar-slide{background: radial-gradient(circle, #003867, #001A4B, #00082C);border-radius: 5px}
+.animated-menu{transition: .5s linear all;opacity: 1;display: block}
+.animated-menu.ng-hide{opacity: 0;overflow: hidden;}
