--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -85,7 +85,7 @@
 							<span hide-gt-sm flex flex-order="2" ng-click="postVisibility = !postVisibility" class="">mostrar</span>
 						</h2>
 					</md-toolbar>
-					<div layout="row" layout-align="start center" id="contenido-publicacion" hide-sm show-gt-sm ng-hide="postVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="postVisibility" >
 						<div id="publicacion" class="imagen-publicacion"><img class="img-post" src="images/{{post.image}}.jpg"></div>
 						<div id="publicacion" class="text-publicacion">{{post.text}}</div>
 					</div>
@@ -113,7 +113,7 @@
 							<span hide-gt-sm flex flex-order="2" ng-click="newVisibility = !newVisibility" class="">mostrar</span>
 						</h2>
 					</md-toolbar>
-					<div layout="row" layout-align="start center" id="contenido-publicacion" hide-sm show-gt-sm ng-hide="newVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="newVisibility" >
 						<div id="publicacion" class="imagen-publicacion"><img class="img-post" src="images/{{new.image}}.jpg"></div>
 						<div id="publicacion" class="text-publicacion">{{new.text}}</div>
 					</div>
@@ -141,7 +141,7 @@
 							<span hide-gt-sm flex flex-order="2" ng-click="eventVisibility = !eventVisibility" class="">mostrar</span>
 						</h2>
 					</md-toolbar>
-					<div layout="row" layout-align="start center" id="contenido-publicacion" hide-sm show-gt-sm ng-hide="eventVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="eventVisibility" >
 						<div id="publicacion" class="imagen-publicacion"><img class="img-post" src="images/{{event.image}}.jpg"></div>
 						<div id="publicacion" class="text-publicacion">{{event.text}}</div>
 					</div>
@@ -168,7 +168,7 @@
 							<span hide-gt-sm flex flex-order="2" ng-click="eventVisibility = !eventVisibility" class="">mostrar</span>
 						</h2>
 					</md-toolbar>
-					<div layout="row" layout-align="start center" id="contenido-publicacion" hide-sm show-gt-sm ng-hide="eventVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="eventVisibility" >
 						<div id="publicacion" class="imagen-publicacion"><img class="img-post" src="images/{{event.image}}.jpg"></div>
 						<div id="publicacion" class="text-publicacion">{{event.text}}</div>
 					</div>
