--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -94,8 +94,8 @@
 			</md-content>
 
 
-		<md-content id="contenedor-new" layout="column" class="md-padding "  flex>
-			
+			<md-content id="contenedor-post" layout="column" class="md-padding "  flex>
+
 			     <md-content>
 				      <md-toolbar class="mi-toolbar-post" >
 					      	<h2 class="md-toolbar-tools titulo-post-new">
@@ -105,15 +105,14 @@
 				      </md-toolbar>
 			    </md-content>
 
-				
-				<md-content id="md-content-publicacion-new" class="md-padding " flex ng-repeat="new in news" hide-sm show-gt-sm ng-hide="columnanewVisibility">
-					<md-toolbar class="mi-toolbar-slide">
-						<h2 class="md-toolbar-tools titulo-post-new">
-							<span class="">{{new.title}}</span>
-							<!--<span hide-gt-sm flex flex-order="2" ng-click="newVisibility = !newVisibility" class="">mostrar</span>-->
+				<md-content id="md-content-publicacion-post" class="md-padding " flex ng-repeat="new in posts" hide-sm show-gt-sm ng-hide="columnanewVisibility">
+					<md-toolbar class="mi-toolbar-slide" >
+						<h2 class="md-toolbar-tools titulo-post-post">
+							<span flex flex-order="1" class="">{{new.title}}</span>  
+							<!--<span hide-gt-sm flex flex-order="2" ng-click="postVisibility = !postVisibility" class="">mostrar</span>-->
 						</h2>
 					</md-toolbar>
-					<div layout="row" flex layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="newVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" ng-hide="newVisibility" >
 						<div id="publicacion" flex="50" class="imagen-publicacion"><img class="img-post" src="images/{{new.image}}.jpg"></div>
 						<div id="publicacion" flex="50" class="text-publicacion">{{new.text}}</div>
 					</div>
@@ -122,8 +121,8 @@
 			</md-content>
 
 
-		<md-content id="contenedor-event" layout="column" class="md-padding "  flex>
-			
+			<md-content id="contenedor-post" layout="column" class="md-padding "  flex>
+
 			     <md-content>
 				      <md-toolbar class="mi-toolbar-post" >
 					      	<h2 class="md-toolbar-tools titulo-post-new">
@@ -133,21 +132,21 @@
 				      </md-toolbar>
 			    </md-content>
 
-				
-				<md-content id="md-content-publicacion-event" class="md-padding " flex ng-repeat="event in events" hide-sm show-gt-sm ng-hide="columnaeventVisibility">
-					<md-toolbar class="mi-toolbar-slide">
-						<h2 class="md-toolbar-tools titulo-post-event">
-							<span class="">{{event.title}}</span>
-							<span hide-gt-sm flex flex-order="2" ng-click="eventVisibility = !eventVisibility" class="">mostrar</span>
+				<md-content id="md-content-publicacion-post" class="md-padding " flex ng-repeat="event in events" hide-sm show-gt-sm ng-hide="columnaeventVisibility">
+					<md-toolbar class="mi-toolbar-slide" >
+						<h2 class="md-toolbar-tools titulo-post-post">
+							<span flex flex-order="1" class="">{{event.title}}</span>  
+							<!--<span hide-gt-sm flex flex-order="2" ng-click="postVisibility = !postVisibility" class="">mostrar</span>-->
 						</h2>
 					</md-toolbar>
-					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" hide-sm show-gt-sm ng-hide="eventVisibility" >
+					<div layout="row" layout-align="start center" id="contenido-publicacion" class="contenido-publicacion" ng-hide="eventVisibility" >
 						<div id="publicacion" flex="50" class="imagen-publicacion"><img class="img-post" src="images/{{event.image}}.jpg"></div>
-						<!--<div id="publicacion" flex="50" class="text-publicacion">{{event.text}}</div>-->
+						<div id="publicacion" flex="50" class="text-publicacion">{{event.text}}</div>
 					</div>
 				</md-content>
 
 			</md-content>
+
 
 		
 		</div>
